Creacion de tests unitarios y de integracion faltantes, cobertura sobre 50%